--- a/index.html
+++ b/index.html
@@ -359,14 +359,6 @@
                                     <label>Năm <span class="required">*</span></label>
                                     <input type="number" name="Nam" value="2025" min="2020" max="2030" required>
                                 </div>
-                                <div class="form-group">
-                                    <label>Lương Theo Giờ (VNĐ) <span class="required">*</span></label>
-                                    <input type="number" name="LuongTheoGio" value="50000" step="1000" required>
-                                </div>
-                                <!-- <div class="form-group">
-                                    <label>Hệ Số Tăng Ca <span class="required">*</span></label>
-                                    <input type="number" name="HeSoTangCa" value="1.5" step="0.1" required>
-                                </div> -->
                             </div>
                             <button type="button" id="btnTinhLuong" class="btn btn-success">
                                 <span>🧮</span> Tính Lương Toàn Bộ Nhân Viên
@@ -408,11 +400,11 @@
                                 <div style="font-size: 20px; font-weight: bold; color: #1e3c72;" id="sumLuongCB">0đ
                                 </div>
                             </div>
-                            <div>
+                            <!-- <div>
                                 <div style="font-size: 12px; color: #6c757d;">Tổng Theo Giờ</div>
                                 <div style="font-size: 20px; font-weight: bold; color: #28a745;" id="sumTheoGio">0đ
                                 </div>
-                            </div>
+                            </div> -->
                             <div>
                                 <div style="font-size: 12px; color: #6c757d;">Tổng Tăng Ca</div>
                                 <div style="font-size: 20px; font-weight: bold; color: #ffc107;" id="sumTangCa">0đ</div>
@@ -436,7 +428,7 @@
                                         <th>Họ Tên</th>
                                         <th>Phòng Ban</th>
                                         <th>Lương CB</th>
-                                        <th>Theo Giờ</th>
+                                        <th>Tổng số giờ</th>
                                         <th>Tăng Ca</th>
                                         <th>Thưởng</th>
                                         <th>Phụ Cấp</th>
@@ -450,7 +442,7 @@
                                     <tr style="background: #f8f9fa; font-weight: bold;">
                                         <td colspan="4">TỔNG CỘNG</td>
                                         <td id="footerLuongCB">0đ</td>
-                                        <td id="footerTheoGio">0đ</td>
+                                        <td id="footerTheoGio">0</td>
                                         <td id="footerTangCa">0đ</td>
                                         <td id="footerThuong">0đ</td>
                                         <td id="footerPhuCap">0đ</td>
