--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     <input type="text" name="DiaChi" placeholder="Quận 1, TP.HCM">
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">
+                            <button type="button" id="btnThemNhanVien" class="btn btn-primary">
                                 <span>➕</span> Thêm Nhân Viên
                             </button>
                         </form>
@@ -459,6 +459,6 @@
         </div>
     </div>
 </body>
-<script src="./js/main.js?v=123"></script>
+<script src="./js/main.js?v=1"></script>
 
 </html>
