--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
                                         <th>Phòng Ban</th>
                                         <th>Lương CB</th>
                                         <th>SĐT</th>
+                                        <th>Ngày Sinh</th>
+                                        <th>Ngày Vào Làm</th>
                                         <th>Trạng Thái</th>
                                         <th>Thao Tác</th>
                                     </tr>
@@ -459,6 +461,6 @@
         </div>
     </div>
 </body>
-<script src="./js/main.js?v=2"></script>
+<script src="./js/main.js?v=3"></script>
 
 </html>
