--- a/index.html
+++ b/index.html
@@ -235,30 +235,9 @@
                                 <div class="form-group">
                                     <label>Loại Công <span class="required">*</span></label>
                                     <select name="LoaiCong" id="loaiCong" required>
-                                        <option value="Thường">Thường (x1.0)</option>
-                                        <option value="Tăng ca">Tăng ca (x1.5)</option>
-                                        <option value="Nghỉ phép">Nghỉ phép có lương</option>
-                                        <option value="Nghỉ không lương">Nghỉ không lương</option>
-                                        <option value="Chủ nhật">Chủ nhật (x2.0)</option>
-                                        <option value="Lễ">Ngày lễ (x3.0)</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>Trạng Thái</label>
-                                    <select name="TrangThai">
-                                        <option value="Đúng giờ">Đúng giờ</option>
-                                        <option value="Đi muộn">Đi muộn</option>
-                                        <option value="Về sớm">Về sớm</option>
-                                        <option value="Thiếu giờ">Thiếu giờ</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>Phòng/Ca Làm Việc</label>
-                                    <select name="CaLamViec">
-                                        <option value="Hành chính">Hành chính (8h-17h)</option>
-                                        <option value="Ca sáng">Ca sáng (6h-14h)</option>
-                                        <option value="Ca chiều">Ca chiều (14h-22h)</option>
-                                        <option value="Ca đêm">Ca đêm (22h-6h)</option>
+                                        <option value="Thường">Thường</option>
+                                        <option value="Tăng ca">Tăng ca</option>
+                                        <option value="Nghỉ phép">Nghỉ phép</option>
                                     </select>
                                 </div>
                             </div>
@@ -461,6 +440,6 @@
         </div>
     </div>
 </body>
-<script src="./js/main.js?v=3"></script>
+<script src="./js/main.js?v=2"></script>
 
 </html>
