--- a/index.html
+++ b/index.html
@@ -235,9 +235,10 @@
                                 <div class="form-group">
                                     <label>Loại Công <span class="required">*</span></label>
                                     <select name="LoaiCong" id="loaiCong" required>
-                                        <option value="Thường">Thường</option>
+                                        <option value="Công thường">Công thường</option>
                                         <option value="Tăng ca">Tăng ca</option>
                                         <option value="Nghỉ phép">Nghỉ phép</option>
+                                        <option value="Lễ">Lễ</option>
                                     </select>
                                 </div>
                             </div>
@@ -248,7 +249,7 @@
                                     rows="2"></textarea>
                             </div>
 
-                            <button type="submit" class="btn btn-primary">
+                            <button type="button" id="btnThemChamCong" class="btn btn-primary">
                                 <span>💾</span> Lưu Chấm Công
                             </button>
                         </form>
@@ -440,6 +441,6 @@
         </div>
     </div>
 </body>
-<script src="./js/main.js?v=2"></script>
+<script src="./js/main.js?v=4"></script>
 
 </html>
