--- a/index.html
+++ b/index.html
@@ -279,12 +279,13 @@
                                 <label>Loại công</label>
                                 <select id="filterLoaiCong">
                                     <option value="">Tất cả</option>
-                                    <option value="Thường">Thường</option>
+                                    <option value="Công Thường">Công Thường</option>
                                     <option value="Tăng ca">Tăng ca</option>
                                     <option value="Nghỉ phép">Nghỉ phép</option>
+                                    <option value="Lễ">Lễ</option>
                                 </select>
                             </div>
-                            <button class="btn btn-primary" onclick="loadChamCong()">
+                            <button class="btn btn-primary" onclick="filterChamCong()">
                                 <span>🔍</span> Lọc
                             </button>
                         </div>
@@ -441,6 +442,6 @@
         </div>
     </div>
 </body>
-<script src="./js/main.js?v=4"></script>
+<script src="./js/main.js?v=2"></script>
 
 </html>
