--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
                             </div>
                             <div class="form-group">
                                 <label>Phòng ban</label>
-                                <select id="filterPhongBanLuong">
+                                <select name="MaPB" id="filterPhongBanLuong">
                                     <option value="">Tất cả phòng ban</option>
                                 </select>
                             </div>
-                            <button class="btn btn-primary" onclick="loadLuong()">
+                            <button class="btn btn-primary" onclick="handleLoadLuong()">
                                 <span>🔍</span> Lọc
                             </button>
                         </div>
@@ -383,11 +383,6 @@
                                 <div style="font-size: 20px; font-weight: bold; color: #1e3c72;" id="sumLuongCB">0đ
                                 </div>
                             </div>
-                            <!-- <div>
-                                <div style="font-size: 12px; color: #6c757d;">Tổng Theo Giờ</div>
-                                <div style="font-size: 20px; font-weight: bold; color: #28a745;" id="sumTheoGio">0đ
-                                </div>
-                            </div> -->
                             <div>
                                 <div style="font-size: 12px; color: #6c757d;">Tổng Tăng Ca</div>
                                 <div style="font-size: 20px; font-weight: bold; color: #ffc107;" id="sumTangCa">0đ</div>
@@ -442,6 +437,6 @@
         </div>
     </div>
 </body>
-<script src="./js/main.js?v=3"></script>
+<script src="./js/main.js?v=4"></script>
 
 </html>
