--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
                                 📊 Tổng Quan Hệ Thống
                             </div>
                         </div>
+                        <h2 style="text-align:center;">Biểu đồ thống kê lương theo quý</h2>
+                        <div class="form-grid">
+                            <div class="form-group">
+                                <label>Quý</label>
+                                <select name="Quy" id="Quy">
+                                    <option value="">-- Chọn quý --</option>
+                                    <option value="1">Quý 1</option>
+                                    <option value="2">Quý 2</option>
+                                    <option value="3">Quý 3</option>
+                                    <option value="4">Quý 4</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label>Năm</label>
+                                <input type="number" name="Nam" id="Nam" value="2025" min="2020" max="2030" required>
+                            </div>
+                        </div>
+                        <canvas id="chartLuong" height="120"></canvas>
                     </div>
                 </div>
 
@@ -437,6 +455,7 @@
         </div>
     </div>
 </body>
-<script src="./js/main.js?v=4"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="./js/main.js?v=3"></script>
 
 </html>
