--- a/index.html
+++ b/index.html
@@ -407,7 +407,11 @@
                             </div>
                             <div>
                                 <div style="font-size: 12px; color: #6c757d;">Tổng Thưởng</div>
-                                <div style="font-size: 20px; font-weight: bold; color: #17a2b8;" id="sumThuong">0đ</div>
+                                <div style="font-size: 20px; font-weight: bold; color: #328E6E;" id="sumThuong">0đ</div>
+                            </div>
+                            <div>
+                                <div style="font-size: 12px; color: #6c757d;">Tổng Khấu trừ</div>
+                                <div style="font-size: 20px; font-weight: bold; color: #17a2b8;" id="sumKhauTru">0đ</div>
                             </div>
                             <div>
                                 <div style="font-size: 12px; color: #6c757d;">TỔNG CHI TRẢ</div>
@@ -456,6 +460,6 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="./js/main.js?v=3"></script>
+<script src="./js/main.js?v=2"></script>
 
 </html>
