--- a/index.html
+++ b/index.html
@@ -380,6 +380,24 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
+                                    <label>Tháng <span class="required">*</span></label>
+                                    <select name="Thang" id="ThangThuong" required>
+                                        <option value="">-- Chọn tháng --</option>
+                                        <option value="1">Tháng 1</option>
+                                        <option value="2">Tháng 2</option>
+                                        <option value="3">Tháng 3</option>
+                                        <option value="4">Tháng 4</option>
+                                        <option value="5">Tháng 5</option>
+                                        <option value="6">Tháng 6</option>
+                                        <option value="7">Tháng 7</option>
+                                        <option value="8">Tháng 8</option>
+                                        <option value="9">Tháng 9</option>
+                                        <option value="10" selected>Tháng 10</option>
+                                        <option value="11">Tháng 11</option>
+                                        <option value="12">Tháng 12</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
                                     <label>Thưởng (VNĐ)</label>
                                     <input type="number" name="Thuong" value="0" min="0">
                                 </div>
@@ -492,6 +510,6 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="./js/main.js?v=2"></script>
+<script src="./js/main.js?v=3"></script>
 
 </html>
