--- a/index.html
+++ b/index.html
@@ -420,6 +420,10 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-title">📊 Bảng Lương Chi Tiết</div>
+                            <div>
+                                <label>Bảo mật lương</label>
+                                <input type="checkbox" id="checkboxBaoMatLuong">
+                            </div>
                         </div>
 
                         <div class="filter-bar">
@@ -510,6 +514,6 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="./js/main.js?v=3"></script>
+<script src="./js/main.js?v=2"></script>
 
 </html>
